kubernetes/manifests/automation/activepieces/configurations/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: activepieces-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-access-log: "true"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
    # nginx.ingress.kubernetes.io/modsecurity-snippet: |
    #   Include ./nginx-modsecurity.conf
spec:
  ingressClassName: nginx
  rules:
    - host: "activepieces.localhost"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: activepieces
                port:
                  number: 8080
# https://github.com/kubernetes/ingress-nginx/blob/main/docs/user-guide/nginx-configuration/annotations.md
